--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <script src="https://unpkg.com/vue"></script>
     </head>
     <body>
-
+        <!-- Component Controller By app.js is determine by id  -->
+        <div id="vue-app">
+            <h1>Hey, {{ name }}</h1>
+        </div>
     </body>
+    <!-- Importing Vue controller APP.js  -->
+    <script src="app.js"></script>
 </html>
